--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,11 @@
+
 # Remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-
+# Mouse mode
 set -g mouse on
 
+# Set 256 colors mode
+set -g default-terminal "screen-256color"
